# test_git_win7

./: CMakeLists.txt  main  main.cpp  makefile  my_solution.cpp  my_solution.h  my_thread.h  mystruct.cpp  mystruct.h  test_1.cpp  test_1.h
jsoncpp-src-0.5.0/buildscons/linux-gcc-4.8.5/: .sconsign.dbm.dblite
jsoncpp-src-0.5.0/buildscons/linux-gcc-4.8.5/src/lib_json/: json_reader.os  json_value.os  json_writer.os
jsoncpp-src-0.5.0/buildscons/linux-gcc-4.8.5/src/test_lib_json/: test_lib_json
my_libfiles/: CMakeLists.txt  intro.cpp  intro.h
pack1/: mystring.cpp  mystring.h  player.cpp  player.h  show.cpp  show.h
test/: CMakeLists.txt  test_boost.cpp  test_leetcode.cpp  test_mylib.cpp  test_third.cpp
test_avro/: jdwdata.h  kafka_source_schema.json
tmpfiles/: .vimrc  count_code_lines.sh  paper_todo.txt  record  vimrc
